syntax = "proto3";

package echo;

service EchoService {
    rpc Echo(EchoRequest) returns (EchoResponse);
    rpc StreamEcho(stream EchoRequest) returns (stream EchoResponse);
    rpc GetStats(StatsRequest) returns (StatsResponse);
    rpc HealthCheck(HealthRequest) returns (HealthResponse);
}

message EchoRequest {
    string message = 1;
    map<string, string> metadata = 2;
    int64 timestamp = 3;
    repeated string tags = 4;
}

message EchoResponse {
    string message = 1;
    string original_message = 2;
    int64 timestamp = 3;
    int64 processing_time_ms = 4;
    map<string, string> metadata = 5;
    repeated string tags = 6;
}

message StatsRequest {
    bool include_detailed = 1;
}

message StatsResponse {
    int64 total_requests = 1;
    double average_processing_time_ms = 2;
    int64 uptime_seconds = 3;
    map<string, int64> request_counts_by_hour = 4;
    repeated string recent_messages = 5;
}

message HealthRequest {
    bool include_details = 1;
}

message HealthResponse {
    enum Status {
        UNKNOWN = 0;
        SERVING = 1;
        NOT_SERVING = 2;
    }
    Status status = 1;
}